<resources>
    <string name="app_name">ZenSearch</string>
    <string name="create_event_title">Создание мероприятия</string>
    <string name="create_event_name_hint">Название мероприятия</string>
    <string name="create_event_date_hint">Дата</string>
    <string name="create_event_time_hint">Время</string>
    <string name="create_event_description_hint">Описание</string>
    <string name="create_event_create">Создать</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home_title">Главная</string>
    <string name="menu_add_event_title">Добавить</string>
    <string name="menu_profile_title">Профиль</string>
    <string name="login_confirm_button">Войти</string>
    <string name="login_registration_button">Зарегистрироваться</string>
    <string name="dont_exists_account">У вас нет учетной записи?</string>
    <string name="sing_up_text">Регистрация</string>
</resources>