<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="20sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/createEventTitle"
            android:layout_width="@dimen/create_event_title_width"
            android:layout_height="wrap_content"
            android:text="@string/create_event_title"
            android:textAppearance="@style/create_event_title"
            android:textSize="@dimen/create_event_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/createEventImage"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="14sp"
            android:background="@drawable/create_event_image"/>

        <EditText
            android:id="@+id/createEventName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_event_name_height"
            android:layout_marginTop="16dp"
            android:padding="10sp"
            android:background="@drawable/create_event_name"
            android:hint="@string/create_event_name_hint"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/createEventImage" />

        <GridLayout
            android:rowCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/createEventDate"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/create_event_date_height"
                android:layout_marginTop="10.84dp"
                android:background="@drawable/create_event_date"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:gravity="left|bottom"
                android:hint="@string/create_event_date_hint"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createEventName" />

            <TextView
                android:layout_columnWeight="1"
                android:id="@+id/createEventTime"
                android:layout_width="@dimen/create_event_time_width"
                android:layout_height="@dimen/create_event_time_height"
                android:focusable="false"
                android:layout_marginTop="10.84dp"
                android:background="@drawable/create_event_time"
                android:drawableStart="@drawable/ic_baseline_access_time_24"
                android:hint="@string/create_event_time_hint"
                android:padding="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createEventName" />

        </GridLayout>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_event_name_height"
            android:layout_marginTop="16dp"
            android:padding="10sp"
            android:background="@drawable/create_event_name"
            android:hint="Адресс"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/createEventImage" />



        <EditText
            android:id="@+id/createEventDescription"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_marginTop="15sp"
            android:gravity="top"
            android:padding="10sp"
            android:background="@drawable/create_event_description"
            android:hint="@string/create_event_description_hint"
            android:inputType="text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10sp"
            android:id="@+id/recyclerTags"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:textAllCaps="false"
            android:layout_marginTop="20sp"
            android:id="@+id/createEventCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/create_event_create"
            android:text="@string/create_event_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </LinearLayout>


</ScrollView>




